add your email to config.jason so i can test email

--- a/config.json
+++ b/config.json
@@ -22,9 +22,9 @@
         "alert": true
       },
       {
-        "user": "farzad",
+        "user": "sina",
         "size": "150000000",
-        "email": "farzad@ahabibi.com",
+        "email": "sinasharifi@ut.ac.ir",
         "alert": false
       }
     ]
