--- a/config.json
+++ b/config.json
@@ -1,47 +1,46 @@
 {
-  "commandChannelPort": 8000,
-  "dataChannelPort":8001,
-  "users": [
-    {
-      "user": "sajjad",
-      "password": "1"
-    },
-    {
-      "user": "sina",
-      "password": "12"
-    }
-  ],
-  "accounting": {
-    "enable": true,
-    "threshold": 100,
+    "commandChannelPort": 8000,
+    "dataChannelPort": 8001,
     "users": [
-      {
-        "user": "navid",
-        "size": "12000",
-        "email": "navid@akbari.com",
-        "alert": true
-      },
-      {
-        "user": "sina",
-        "size": "150000000",
-        "email": "sinasharifi@ut.ac.ir",
-        "alert": false
-      }
-    ]
-  },
-  "logging": {
-    "enable": true,
-    "path": "./logs.log"
-  },
-  "authorization": {
-    "enable": true,
-    "admins": [
-      "farzad"
+        {
+            "user": "sajjad",
+            "password": "1"
+        },
+        {
+            "user": "sina",
+            "password": "12"
+        }
     ],
-    "files": [
-      "./config.json",
-      "./example.png"
-    ]
-  }
-    
+    "accounting": {
+        "enable": false,
+        "threshold": 100,
+        "users": [
+            {
+                "user": "sajjad",
+                "size": 1200,
+                "email": "sinasharifi@ut.ac.ir",
+                "alert": true
+            },
+            {
+                "user": "sina",
+                "size": 150000000,
+                "email": "sinasharifi@ut.ac.ir",
+                "alert": false
+            }
+        ]
+    },
+    "logging": {
+        "enable": true,
+        "path": "./logs.log"
+    },
+    "authorization": {
+        "enable": true,
+        "admins": [
+            "farzad"
+        ],
+        "files": [
+            "./config.json",
+            "./example.png"
+        ]
+    }
 }
